# network-blocker

./: .gitignore  README.md  README_vi.md  commit.txt  documents.html  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tech_stack_blueprint.html
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
apps/extension/: README.md  background.js  block.html  block.js  manifest.json  popup.html  popup.js
apps/mobile/: metro.config.js  package.json
apps/mobile/app/: _layout.tsx  login.tsx
apps/mobile/app/(tabs)/: _layout.tsx  blocklist.tsx  gamification.tsx  index.tsx  settings.tsx
apps/mobile/context/: AuthContext.tsx
apps/mobile/hooks/: useAnalytics.ts  useBlockRules.ts  useSettings.js
apps/mobile/services/: firebase.ts
apps/pc/: .gitignore  README.md  index.html  package.json  postcss.config.js  tailwind.config.js  vite.config.js
apps/pc/src/: App.jsx  index.css  main.jsx
apps/pc/src-tauri/: Cargo.toml  tauri.conf.json
apps/pc/src-tauri-old/: Cargo.toml  tauri.conf.json
apps/pc/src-tauri-old/src/: main.rs
apps/pc/src-tauri/capabilities/: default.json
apps/pc/src-tauri/src/: main.rs
apps/pc/src/assets/: example_import.csv
apps/pc/src/components/: BlockList.jsx  Dashboard.jsx  FrictionModal.jsx  Gamification.jsx  Login.jsx  Settings.jsx  Sidebar.jsx  StateScreens.jsx
apps/pc/src/constants/: presets.js
apps/pc/src/context/: FocusContext.jsx
apps/pc/src/hooks/: useAnalytics.js  useBlockRules.js  useSettings.js
backend/firebase/: .firebaserc  firebase.json  firestore.rules
backend/firebase/functions/: index.js  package.json
docs/: SDD_MindfulBlock.md  SRS_MindfulBlock.md  documents.html  index.html  tech-context.md  tech_stack_blueprint.html
shared/: index.js  package.json
shared/schemas/: gamification.js  rule.js  rule.json  ruleGroup.js  ruleGroup.json
shared/utils/: validation.js
(+4 files in other folders)
