[package]
name = "mindful-block"
version = "1.0.0"
description = "System-level network blocker for MindfulBlock"
authors = ["Pham Nhat Quang"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
is_elevated = "0.1"

[features]
custom-protocol = ["tauri/custom-protocol"]