[package]
name = "mindful-block"
version = "1.0.0"
description = "Hệ thống chặn mạng"
authors = ["Pham Nhat Quang"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-autostart = "2.0.0" # Now compatible!
tauri-plugin-shell = "2.0.0"     # Required for 'ipconfig' commands
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
is_elevated = "0.1"
log = "0.4"
tauri-plugin-opener = "2.5.3"
tauri-plugin-oauth = "2.0.0" # Make sure this matches the official v2 release
tiny_http = "0.12"
[features]
custom-protocol = ["tauri/custom-protocol"]
